# NyxID

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  WORKFLOW.md  docker-compose.prod.yml  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
backend/: Cargo.toml  Dockerfile
backend/docs/: PUSH_DEVICES_BACKEND_CHANGES.md
backend/src/: api_docs.rs  config.rs  db.rs  login_cli.rs  main.rs  routes.rs  ssh_cli.rs
backend/src/crypto/: aes.rs  apple_client_secret.rs  aws_kms_provider.rs  gcp_kms_provider.rs  jwks.rs  jwt.rs  key_provider.rs  local_key_provider.rs  mod.rs  password.rs  telegram.rs  token.rs
backend/src/errors/: mod.rs
backend/src/handlers/: admin.rs  admin_groups.rs  admin_helpers.rs  admin_nodes.rs  admin_roles.rs  admin_sa_connections.rs  admin_sa_providers.rs  admin_service_accounts.rs  api_keys.rs  approvals.rs  auth.rs  connections.rs  consent.rs  delegation.rs  developer_apps.rs  device_tokens.rs  docs.rs  endpoints.rs  health.rs  llm_gateway.rs  mcp.rs  mcp_transport.rs  mfa.rs  mod.rs  node_admin.rs  node_ws.rs  notifications.rs  oauth.rs  oidc_discovery.rs  providers.rs  proxy.rs  service_requirements.rs  services.rs  services_helpers.rs  sessions.rs  social_auth.rs  ssh_exec.rs  ssh_tunnel.rs  ssh_web_terminal.rs  user_credentials.rs  (+3 more)
backend/src/models/: api_key.rs  approval_grant.rs  approval_request.rs  audit_log.rs  authorization_code.rs  bson_bytes.rs  bson_datetime.rs  consent.rs  downstream_service.rs  group.rs  mcp_session.rs  mfa_factor.rs  mod.rs  node_registration_token.rs  node_service_binding.rs  notification_channel.rs  oauth_client.rs  oauth_state.rs  provider_config.rs  refresh_token.rs  role.rs  service_account.rs  service_account_token.rs  service_approval_config.rs  service_endpoint.rs  service_provider_requirement.rs  session.rs  ssh_service.rs  user.rs  user_provider_credentials.rs  user_provider_token.rs  user_service_connection.rs
backend/src/mw/: auth.rs  csrf.rs  rate_limit.rs  security_headers.rs
backend/src/services/: admin_user_service.rs  api_docs_service.rs  approval_service.rs  audit_service.rs  auth_service.rs  chatgpt_translator.rs  connection_service.rs  consent_service.rs  content_type.rs  delegation_service.rs  group_service.rs  identity_service.rs  key_service.rs  llm_gateway_service.rs  mcp_service.rs  mfa_service.rs  mod.rs  node_metrics_service.rs  node_routing_service.rs  node_service.rs  node_ws_manager.rs  notification_service.rs  oauth_client_service.rs  oauth_flow.rs  oauth_service.rs  openapi_parser.rs  provider_service.rs  proxy_service.rs  push_service.rs  rbac_helpers.rs  role_service.rs  service_account_service.rs  service_endpoint_service.rs  social_auth_service.rs  social_token_exchange_service.rs  ssh_service.rs  telegram_poller.rs  telegram_service.rs  token_exchange_service.rs  token_service.rs  (+2 more)
docs/: ADMIN_PROVIDER_MGMT_PLAN.md  ADMIN_SA_OAUTH_PLAN.md  API.md  API_PROXY_ACCESS_PLAN.md  APPROVAL_SYSTEM_PLAN.md  APPROVAL_SYSTEM_REVIEW.md  ARCHITECTURE.md  ARCHITECTURE_PLAN.md  BACKEND_CHANGES_MOBILE_AUTHENTICATOR.md  DELEGATED_ACCESS_PLAN.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  ENCRYPTION_ARCHITECTURE.md  ENCRYPTION_KEY_VERSIONING_PLAN.md  ENVELOPE_ENCRYPTION_DESIGN.md  ENVELOPE_ENCRYPTION_PLAN.md  ENVELOPE_ENCRYPTION_REVIEW.md  KMS_MIGRATION_GUIDE.md  KMS_OPERATIONS_GUIDE.md  LAZY_TOOLS_PLAN.md  LLM_GATEWAY_PLAN.md  LLM_GATEWAY_REVIEW.md  MCP_DELEGATION_FLOW.md  MOBILE_APP_INTEGRATION.md  MOBILE_PUSH_PLAN.md  NODE_PROXY.md  NODE_PROXY_ARCHITECTURE.md  NODE_PROXY_PROTOCOL.md  NYXID_MOBILE_AUTHENTICATOR_BRIEF_ZH.md  NYXID_MOBILE_AUTHENTICATOR_PRD.md  NYXID_MOBILE_AUTHENTICATOR_TECH_SPEC.md  NYXID_NODE.md  NYXID_NODE_AGENT_PLAYBOOK.md  OIDC.md  OPENCLAW_INTEGRATION.md  PHASE4_IMPLEMENTATION_PLAN.md  PHASE4_REVIEW_FINDINGS.md  RBAC_OIDC_PLAN.md  RBAC_OIDC_REVIEW.md  SECURITY.md  (+20 more)
frontend/: .env.development  (+10 more)
node-agent/: Cargo.toml
node-agent/src/: cli.rs  config.rs  credential_store.rs  encryption.rs  error.rs  keychain.rs  main.rs  metrics.rs  proxy_executor.rs  secret_backend.rs  signing.rs  ws_client.rs
(+322 files in other folders)
