[package]
name = "nyxid"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "request-id"] }
tokio = { workspace = true }
mongodb = { workspace = true }
bson = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
jsonwebtoken = "9"
argon2 = "0.5"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.22"
rsa = { version = "0.9", features = ["pem"] }
totp-rs = { version = "5", features = ["qr", "gen_secret"] }
validator = { version = "0.19", features = ["derive"] }
governor = "0.8"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
bytes = "1"
anyhow = "1"
thiserror = "2"
dotenvy = "0.15"
url = "2"
urlencoding = "2"
