[package]
name = "nyxid"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace", "request-id"] }
tokio = { workspace = true }
mongodb = { workspace = true }
bson = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
jsonwebtoken = "9.3"
argon2 = "0.5.3"
aes-gcm = "0.10.3"
sha2 = "0.10.9"
rand = "0.8.5"
hex = "0.4.3"
base64 = "0.22.1"
rsa = { version = "0.9.10", features = ["pem"] }
totp-rs = { version = "5.7", features = ["qr", "gen_secret"] }
validator = { version = "0.20", features = ["derive"] }
governor = "0.8.1"
reqwest = { version = "0.12.28", features = ["json", "stream", "rustls-tls"], default-features = false }
utoipa = { version = "5.4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "8.1", features = ["axum"] }
bytes = "1.11"
anyhow = "1.0.101"
thiserror = "2.0.18"
dotenvy = "0.15.7"
clap = { version = "4.5", features = ["derive"] }
subtle = "2"
url = "2.5"
urlencoding = "2.1"
zeroize = "1"
